style.css
/*rect {
  transition: transform .2s;
  transform-origin: center center;
  transform-box: fill-box;
}

rect:hover {
  transform: scale(5); 
}


*/




svg.matrixSvg {

    border: 1px solid;
    background-color: white;
}

* {
    font-family: 'Helvetica Neue';
}

p {
    font-size: 1em;
}

h2,
#songName { 
    font-family: "Helvetica Neue"; 
    font-size: 22px; 
    font-style: normal; 
    font-variant: normal; 
    font-weight: 700; 
    line-height: 26.4px;
    color:black;
}


#matrixRowContainer {
    margin:auto;
    width: 100%;
}

.matrixContainer {
    margin-left:-1px;
}

.row.content-row {
    width:100%;
    margin:auto;
    border-top: 1px solid black;
    display: flex;
}

.col-5.content-col {
    margin-top:-1px;
    margin-bottom:0px;
    padding-bottom: 5em;
    border-left: 1px solid black;
}

.col-5.empty-col {
    display: table-cell;
    vertical-align: top;
    /*height:0px;
    padding: 0px;
    margin: 0px;*/
}

.col-5.no-border {
    border-left: 0px;
}




/*** HEADER STYLING ***/
#header-row {
    border-top: 0px;
}

#header-row .content-col {
    padding:1em;
    position: relative;
    padding-right:0;
    padding-bottom: 0;
}


#logo {
    margin-top: 1.2em;
}

.flex-container {
    display: flex;
    align-items: flex-start;
    height:100%;
}



#song-selector {
    float: left;
    display:inline-block;
}


#song-info, 
#song-selector {
    margin:0.8em;
}

#song-info{
    text-align: left;
    margin-top: 1em;
    height:auto;
}

#song-info h2 {
    margin:0;
}


#artist {
    font-size: 16px;
    font-weight: 300;
    white-space:nowrap;
}


#custom-file {
    float:right;
    margin-left: auto;
}

.inputfile + label,
#custom-file {
    font-weight: 300;
    color: #737373;
}


/*** GENERAL BUTTON AND INPUT STYLING ***/

.btn,
button,
.parameters input,
#genre-ul,
#genre-ul ul {
    border-color:#8c8c8c;
    border-radius:2px;
    border-width: 2px;
    border-style: solid;
}

.parameters input {
    padding-left:5px;
}

#genre-ul, #genre-ul ul {
    padding: 0;
}

#genre-ul ul {
    top: -2px;
    margin-left:3px;
}

.inputfile {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}


#description {
    padding: 1em;
    padding-right: 0;
    margin-bottom: 0.4em;
    width:100%;
}

#description strong {
    font-weight: 500;
}

#description button {
    border:none;
    padding: 0;
    font-weight: 300;
    font-size:1em;
    float: right;
}

#description button:hover,
#description button:active,
#description button:focus {
    text-decoration: underline;
    border: none;
    text-shadow: none;
    box-shadow: none;
}

#description-content {
    margin-top:2em;
    display: none;
    text-align: justify; 
}


.signature, 
#custom-file {
    font-size: 0.85em;
}

.signature {
    float: right;
    margin-top: 0.5em;
    margin-bottom: 0.3em;
}

.inputfile:focus + label,
.inputfile + label:hover {
    /*background-color: #d4d4d4;*/
    cursor: pointer;
    text-decoration: underline;
}



#music-menu > button.btn.btn-default {
    text-transform: uppercase;
}


.container-vertical {
    width:100%;
    height:100%;
}

.parameters {
    /*width:100%;*/
    /*margin:0.8em;
    margin-bottom: 0;
    margin-top:3em;*/
    font-weight: 300;
    margin-top:3em;
    margin-bottom:0.8em;
    float:right;
}


.parameters input {
    /*float:right;
    margin-right: 0.8em;
    margin-left: auto;*/
}


.parameters input,
.parameters span {
    /*float:right;*/
}    


.matrix-info {
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
}

.matrix-info a {
    color: #737373;
    float: right;
    margin: auto;
    margin-right: 0;
    font-size: 14px;
}


.matrix-info .instrumentName {
    float: left;
    margin: auto;
    margin-left: 1em;
    font-size: 14px;
    
}


.instrumentName {
    transform-origin: left;
    transform: rotate(-90deg) translate(1.4em, -2em);
}


svg.matrix {
    background-color: white;
    border: black;
    border-style: solid;
    border-width: 1px;
    cursor: crosshair;
}

.genre {
    text-transform: capitalize;
}

.year-element {
    text-transform: none;
}

li.genre.grey.open a.genre {
    background-color: #999999;
}


li.genre.grey a.genre {
    background-color: #bfbfbf;
}


.year-element {
    text-align: center;
    background-color: #bfbfbf;
}

.caret.caret-up {
    transform: rotate(180deg) ;
}

